ansible/roles/kube-dashboard/files/svc-lb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-lb
  namespace: kubernetes-dashboard
  annotations:
    lb.kubesphere.io/v1alpha1: openelb
    protocol.openelb.kubesphere.io/v1alpha1: layer2
    eip.openelb.kubesphere.io/v1alpha2: kubernetes-dashboard-eip
spec:
  selector:
    k8s-app: kubernetes-dashboard
  type: LoadBalancer
  ports:
    - name: https
      port: 443
      targetPort: 8443
